deploy/k8s/sk/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stablekernel
  labels:
    kubernetes.io/metadata.name: stablekernel
