deploy/k8s/sk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridiron-2000-sk
  namespace: stablekernel
  labels:
    app: gridiron-2000-sk
spec:
  type: ClusterIP
  selector:
    app: gridiron-2000-sk
  ports:
    - name: http
      port: 80
      targetPort: http
